# task_manager

./: Dockerfile  Makefile  README.md  celery_conf.py  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: Docker_and_tests.yml  black.yml  main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_expired_date.py  0004_alter_task_author_alter_task_performer.py  0005_alter_task_author_alter_task_performer.py  0006_user_date_of_birth_user_phone.py  0007_user_avatar_picture.py
main/models/: task.py  user.py
main/services/: mail.py  single_resource.py  storage_backends.py
main/test/: base.py  test_admin.py  test_authentication_jwt.py  test_permissions.py  test_tag.py  test_task.py  test_user.py
main/test/fixtures/factories/: user.py
main/test/test_views/: test_tag.py  test_task.py  test_user.py
main/tests/: base.py  test_admin.py  test_authentication_jwt.py  test_countdown.py  test_mail.py  test_permissions.py
main/tests/test_views/: test_current_user.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
task_manager/: celery.py  settings.py  tasks.py  urls.py
templates/emails/: notification.html
